hphp/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php.expectf
*** Testing parse_url() : usage variations ***

Arg value 0

Warning: parse_url() expects parameter 1 to be string, integer given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 1

Warning: parse_url() expects parameter 1 to be string, integer given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 12345

Warning: parse_url() expects parameter 1 to be string, integer given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value -2345

Warning: parse_url() expects parameter 1 to be string, integer given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 10.5

Warning: parse_url() expects parameter 1 to be string, double given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value -10.5

Warning: parse_url() expects parameter 1 to be string, double given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 101234567000

Warning: parse_url() expects parameter 1 to be string, double given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 1.07654321E-9

Warning: parse_url() expects parameter 1 to be string, double given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 0.5

Warning: parse_url() expects parameter 1 to be string, double given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 

Warning: parse_url() expects parameter 1 to be string, null given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 

Warning: parse_url() expects parameter 1 to be string, null given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 1

Warning: parse_url() expects parameter 1 to be string, boolean given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 

Warning: parse_url() expects parameter 1 to be string, boolean given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 1

Warning: parse_url() expects parameter 1 to be string, boolean given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 

Warning: parse_url() expects parameter 1 to be string, boolean given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61

Arg value 
dict(1) {
  ["path"]=>
  string(0) ""
}

Arg value 
dict(1) {
  ["path"]=>
  string(0) ""
}
Error: 4096 - Object of class stdClass could not be converted to string, %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php(60)

Arg value 

Warning: parse_url() expects parameter 1 to be string, object given in %s/test/zend/good/ext/standard/tests/url/parse_url_variation_001.php on line 61
Done